NIST updates
n this commit, we present an expanded version of the UserService class that integrates additional functionality, improves code organization, and maintains NIST (National Institute of Standards and Technology) level security.

The UserService class now includes several methods for user management operations. The createUser method creates a new user with high-level NIST security measures, such as password encoding and role assignment. The deleteUser method allows for user deletion while ensuring data integrity and adhering to NIST security standards.

We have introduced the createPet method, which enables users to create pets associated with their accounts. This method follows medium-level NIST security standards to safeguard the pet creation process.

To ensure secure user authentication, the class implements the UserDetailsService interface and overrides the loadUserByUsername method. This method fetches user details based on their email, and high-level NIST security measures are implemented.

The petsListByUserId method retrieves a list of pets associated with a specific user ID. It follows a low-level NIST security standard, ensuring basic security measures are in place while retrieving pet information.

Throughout the class, annotations like @Transactional and @RequiredArgsConstructor enhance transaction management and facilitate dependency injection, respectively.

The expanded UserService class adheres to NIST security standards at varying levels, ensuring a robust and secure user management system.